@@ -3,27 +3,21 @@
  */
 package org.etools.j1939_84.controllers.part1;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.etools.j1939_84.J1939_84.NL;
 import static org.etools.j1939_84.bus.j1939.packets.ComponentIdentificationPacket.createComponentIdPacket;
 import static org.etools.j1939_84.model.Outcome.FAIL;
 import static org.etools.j1939_84.model.Outcome.WARN;
-import static org.etools.j1939_84.utils.CollectionUtils.join;
 import static org.junit.Assert.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
-import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.Executor;
-import org.etools.j1939_84.bus.Packet;
 import org.etools.j1939_84.bus.j1939.BusResult;
 import org.etools.j1939_84.bus.j1939.J1939;
 import org.etools.j1939_84.bus.j1939.packets.ComponentIdentificationPacket;
@@ -55,29 +49,29 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
 
     private static final String COLON_SPACE = ": ";
 
-    private static final String EXPECTED_WARN_MESSAGE_3_D = "6.1.9.3.d Model field (SPN 587) is less than 1 character long";
+    private static final String EXPECTED_WARN_MESSAGE_3_D = "6.1.9.3.d - Model field (SPN 587) is less than 1 character long";
 
-    private static final String EXPECTED_FAIL_MESSAGE_1_A = "6.1.9.1.a There are no positive responses (serial number SPN 588 not supported by any OBD ECU)";
+    private static final String EXPECTED_FAIL_MESSAGE_1_A = "6.1.9.1.a - There are no positive responses (serial number SPN 588 not supported by any OBD ECU)";
 
-    private static final String EXPECTED_FAIL_MESSAGE_2_B = "6.1.9.2.b None of the positive responses were provided by the same SA as the SA that claims to be function 0 (engine)";
+    private static final String EXPECTED_FAIL_MESSAGE_2_B = "6.1.9.2.b - None of the positive responses were provided by the same SA as the SA that claims to be function 0 (engine)";
 
-    private static final String EXPECTED_FAIL_MESSAGE_2_C = "6.1.9.2.c Serial number field (SPN 588) from any function 0 device does not end in 6 numeric characters (ASCII 0 through ASCII 9)";
+    private static final String EXPECTED_FAIL_MESSAGE_2_C = "6.1.9.2.c - Serial number field (SPN 588) from any function 0 device does not end in 6 numeric characters (ASCII 0 through ASCII 9)";
 
-    private static final String EXPECTED_FAIL_MESSAGE_2_D = "6.1.9.2.d The make (SPN 586), model (SPN 587), or serial number (SPN 588) from any OBD ECU contains any unprintable ASCII characters";
+    private static final String EXPECTED_FAIL_MESSAGE_2_D = "6.1.9.2.d - The make (SPN 586), model (SPN 587), or serial number (SPN 588) from any OBD ECU contains any unprintable ASCII characters";
 
-    private static final String EXPECTED_FAIL_MESSAGE_5_A = "6.1.9.5.a There is no positive response from function 0";
+    private static final String EXPECTED_FAIL_MESSAGE_5_A = "6.1.9.5.a - There is no positive response from function 0";
 
-    private static final String EXPECTED_FAIL_MESSAGE_5_B = "6.1.9.5.b Global response does not match the destination specific response from function 0";
+    private static final String EXPECTED_FAIL_MESSAGE_5_B = "6.1.9.5.b - Global response does not match the destination specific response from function 0";
 
-    private static final String EXPECTED_FAIL_MESSAGE_6_A = "6.1.9.6.a Component ID not supported for the global query, when supported by destination specific query";
+    private static final String EXPECTED_FAIL_MESSAGE_6_A = "6.1.9.6.a - Component ID not supported for the global query, when supported by destination specific query";
 
-    private static final String EXPECTED_WARN_MESSAGE_3_A = "6.1.9.3.a Serial number field (SPN 588) from any function 0 device is less than 8 characters long";
+    private static final String EXPECTED_WARN_MESSAGE_3_A = "6.1.9.3.a - Serial number field (SPN 588) from any function 0 device is less than 8 characters long";
 
-    private static final String EXPECTED_WARN_MESSAGE_3_B = "6.1.9.3.b Make field (SPN 586) is longer than 5 ASCII characters";
+    private static final String EXPECTED_WARN_MESSAGE_3_B = "6.1.9.3.b - Make field (SPN 586) is longer than 5 ASCII characters";
 
-    private static final String EXPECTED_WARN_MESSAGE_3_C = "6.1.9.3.c Make field (SPN 586) is less than 2 ASCII characters";
+    private static final String EXPECTED_WARN_MESSAGE_3_C = "6.1.9.3.c - Make field (SPN 586) is less than 2 ASCII characters";
 
-    private static final String EXPECTED_WARN_MESSAGE_4_A_4_B = "6.1.9.4.a & 6.1.9.4.b Global Component ID request for PGN 65259 did not receive any packets";
+    private static final String EXPECTED_WARN_MESSAGE_4_A_4_B = "6.1.9.4.a & 6.1.9.4.b - Global Component ID request for PGN 65259 did not receive any packets";
 
     private static final int PART_NUMBER = 1;
 
@@ -100,13 +94,12 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     @Mock
     private J1939 j1939;
 
-    private TestResultsListener listener;
+    private ReportFileModule reportFileModule;
 
     @Mock
     private ResultsListener mockListener;
 
-    @Mock
-    private ReportFileModule reportFileModule;
+    private TestResultsListener listener;
 
     @Mock
     private VehicleInformationModule vehicleInformationModule;
@@ -115,30 +108,12 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
                                                             String model, String serialNumber, String unitNumber) {
         OBDModuleInformation module = new OBDModuleInformation(sourceAddress);
         module.setFunction(function);
-
-        byte[] bytes = join(make.getBytes(UTF_8),
-                            "*".getBytes(UTF_8),
-                            model.getBytes(UTF_8),
-                            "*".getBytes(UTF_8),
-                            serialNumber.getBytes(UTF_8),
-                            "*".getBytes(UTF_8),
-                            unitNumber.getBytes(UTF_8));
-
-        ComponentIdentificationPacket componentIdentificationPacket = new ComponentIdentificationPacket(
-                Packet.create(ComponentIdentificationPacket.PGN, sourceAddress, bytes)
-        );
+        ComponentIdentificationPacket componentIdentificationPacket = createComponentIdPacket(sourceAddress,
+                                                                                              make,
+                                                                                              model,
+                                                                                              serialNumber,
+                                                                                              unitNumber);
         module.setComponentInformationIdentification(componentIdentificationPacket.getComponentIdentification());
-        return module;
-    }
-
-    private OBDModuleInformation createOBDModuleInformation(Integer sourceAddress, Integer function) {
-        OBDModuleInformation module = mock(OBDModuleInformation.class);
-        if (sourceAddress != null) {
-            when(module.getSourceAddress()).thenReturn(sourceAddress);
-        }
-        if (function != null) {
-            when(module.getFunction()).thenReturn(function);
-        }
         return module;
     }
 
@@ -151,7 +126,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
      */
 
     @Before
-    public void setUp() throws Exception {
+    public void setUp() {
 
         listener = new TestResultsListener(mockListener);
         DateTimeModule.setInstance(null);
@@ -169,19 +144,18 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @After
-    public void tearDown() throws Exception {
+    public void tearDown() {
 
         verifyNoMoreInteractions(executor,
                                  engineSpeedModule,
                                  bannerModule,
                                  vehicleInformationModule,
                                  dataRepository,
-                                 mockListener,
-                                 reportFileModule);
+                                 mockListener);
     }
 
     @Test
-    public void testDestinationSpecificPacketsEmpty() throws IOException {
+    public void testDestinationSpecificPacketsEmpty() {
         ComponentIdentificationPacket packet = createComponentIdPacket(0x00,
                                                                        "BatMan",
                                                                        "TheBatCave",
@@ -199,7 +173,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
 
         when(vehicleInformationModule.reportComponentIdentification(any()))
                 .thenReturn(new RequestResult<>(false, List.of(packet),
-                                                Collections.emptyList()));
+                                                List.of()));
 
         when(vehicleInformationModule.reportComponentIdentification(any(), eq(0x00)))
                 .thenReturn(new BusResult<>(false, Optional.empty()));
@@ -215,30 +189,16 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_5_A);
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_5_B);
 
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_1_A);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_2_B);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_A);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_D);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_5_A);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_5_B);
-
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_1_A);
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_2_B);
-        verify(reportFileModule).onResult(WARN.toString() + COLON_SPACE + EXPECTED_WARN_MESSAGE_3_A);
-        verify(reportFileModule).onResult(WARN.toString() + COLON_SPACE + EXPECTED_WARN_MESSAGE_3_D);
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_5_A);
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_5_B);
-
-        String functionZeroWarning = "0 module(s) have claimed function 0 - only one module should";
-        verify(reportFileModule).onResult(WARN.toString() + COLON_SPACE + functionZeroWarning);
-
         verify(vehicleInformationModule).reportComponentIdentification(any());
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0x00));
 
         // Verify the documentation was recorded correctly
         assertEquals("", listener.getMessages());
         assertEquals("", listener.getMilestones());
-        String expectedResults = FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_1_A + NL + WARN.toString() + COLON_SPACE + functionZeroWarning + NL +
+
+        String functionZeroWarning = "0 module(s) have claimed function 0 - only one module should";
+        String expectedResults = FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_1_A + NL
+                + WARN.toString() + COLON_SPACE + functionZeroWarning + NL +
                 FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_2_B + NL +
                 WARN.toString() + COLON_SPACE + EXPECTED_WARN_MESSAGE_3_A + NL +
                 WARN.toString() + COLON_SPACE + EXPECTED_WARN_MESSAGE_3_D + NL +
@@ -265,12 +225,12 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testGlobalRequestDoesNotMatchDestinationSpecificRequest() throws IOException {
-        ComponentIdentificationPacket packet = ComponentIdentificationPacket.createComponentIdPacket(0,
-                                                                                                     "Bat",
-                                                                                                     "TheBatCave",
-                                                                                                     "ST109823456",
-                                                                                                     "");
+    public void testGlobalRequestDoesNotMatchDestinationSpecificRequest() {
+        ComponentIdentificationPacket packet = createComponentIdPacket(0,
+                                                                       "Bat",
+                                                                       "TheBatCave",
+                                                                       "ST109823456",
+                                                                       "");
 
         OBDModuleInformation obdMoule0x00 = createOBDModuleInformation(0x00,
                                                                        0,
@@ -302,16 +262,6 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_5_B);
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_6_A);
 
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_4_A_4_B);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_5_A);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_5_B);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_6_A);
-
-        verify(reportFileModule).onResult(WARN.toString() + COLON_SPACE + EXPECTED_WARN_MESSAGE_4_A_4_B);
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_5_A);
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_5_B);
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_6_A);
-
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0));
         verify(vehicleInformationModule).reportComponentIdentification(any());
 
@@ -326,7 +276,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testHappyPath() throws IOException {
+    public void testHappyPath() {
         ComponentIdentificationPacket packet0x00 = createComponentIdPacket(0,
                                                                            "Bat",
                                                                            "TheBatCave",
@@ -389,8 +339,9 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         when(dataRepository.getObdModule(0x03)).thenReturn(obdModule0x03);
 
         when(vehicleInformationModule.reportComponentIdentification(any()))
-                .thenReturn(new RequestResult<>(false, List.of(packet0x00, packet0x01, packet0x02, packet0x03),
-                                                Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false,
+                                                List.of(packet0x00, packet0x01, packet0x02, packet0x03),
+                                                List.of()));
 
         when(vehicleInformationModule.reportComponentIdentification(any(), eq(0x00)))
                 .thenReturn(new BusResult<>(false, packet0x00));
@@ -426,7 +377,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testMakeContainsNonPrintableAsciiCharacterFailure() throws IOException {
+    public void testMakeContainsNonPrintableAsciiCharacterFailure() {
         char unprintableAsciiLineFeed = 0xa;
         ComponentIdentificationPacket packet = createComponentIdPacket(0,
                                                                        "Bat" + unprintableAsciiLineFeed,
@@ -445,8 +396,9 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         when(dataRepository.getObdModules()).thenReturn(List.of(obdMoule0x00));
 
         when(vehicleInformationModule.reportComponentIdentification(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet),
-                                                Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false,
+                                                List.of(packet),
+                                                List.of()));
 
         when(vehicleInformationModule.reportComponentIdentification(any(), eq(0)))
                 .thenReturn(new BusResult<>(false, packet));
@@ -458,9 +410,6 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         verify(dataRepository).putObdModule(obdMoule0x00);
 
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_2_D);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_2_D);
-
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_2_D);
 
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0));
         verify(vehicleInformationModule).reportComponentIdentification(any());
@@ -472,7 +421,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testMakeFieldMoreThanFiveCharacters() throws IOException {
+    public void testMakeFieldMoreThanFiveCharacters() {
 
         ComponentIdentificationPacket packet = createComponentIdPacket(0,
                                                                        "BatMan",
@@ -490,8 +439,8 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         when(dataRepository.getObdModules()).thenReturn(List.of(obdModule));
         when(dataRepository.getObdModule(0x00)).thenReturn(obdModule);
         when(vehicleInformationModule.reportComponentIdentification(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet),
-                                                Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet),
+                                                List.of()));
 
         when(vehicleInformationModule.reportComponentIdentification(any(), eq(0)))
                 .thenReturn(new BusResult<>(false, packet));
@@ -504,9 +453,6 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
 
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_B);
 
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_B);
-        verify(reportFileModule).onResult(WARN.toString() + COLON_SPACE + EXPECTED_WARN_MESSAGE_3_B);
-
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0));
         verify(vehicleInformationModule).reportComponentIdentification(any());
 
@@ -518,7 +464,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testMakeFiveCharactersWarning() throws IOException {
+    public void testMakeFiveCharactersWarning() {
         ComponentIdentificationPacket packet = createComponentIdPacket(0,
                                                                        "BatMan",
                                                                        "TheBatCave",
@@ -536,8 +482,8 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         when(dataRepository.getObdModule(0x00)).thenReturn(obdModule);
 
         when(vehicleInformationModule.reportComponentIdentification(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet),
-                                                Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet),
+                                                List.of()));
 
         when(vehicleInformationModule.reportComponentIdentification(any(), eq(0)))
                 .thenReturn(new BusResult<>(false, packet));
@@ -550,9 +496,6 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
 
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_B);
 
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_B);
-        verify(reportFileModule).onResult(WARN.toString() + COLON_SPACE + EXPECTED_WARN_MESSAGE_3_B);
-
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0));
         verify(vehicleInformationModule).reportComponentIdentification(any());
 
@@ -563,7 +506,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testMakeLessTwoAsciiCharactersWarning() throws IOException {
+    public void testMakeLessTwoAsciiCharactersWarning() {
         ComponentIdentificationPacket packet = createComponentIdPacket(0,
                                                                        "B",
                                                                        "TheBatCave",
@@ -594,9 +537,6 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         verify(dataRepository).putObdModule(obdModule);
 
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_C);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_C);
-
-        verify(reportFileModule).onResult(WARN.toString() + COLON_SPACE + EXPECTED_WARN_MESSAGE_3_C);
 
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0));
         verify(vehicleInformationModule).reportComponentIdentification(any());
@@ -610,7 +550,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testModelContainsNonPrintableAsciiCharacterFailure() throws IOException {
+    public void testModelContainsNonPrintableAsciiCharacterFailure() {
         //char unprintableAsciiNull = 0x0;
         char unprintableAsciiCarriageReturn = 0xD;//0xD;
         String model = unprintableAsciiCarriageReturn + "TheBatCave";
@@ -632,7 +572,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
 
         when(vehicleInformationModule.reportComponentIdentification(any()))
                 .thenReturn(new RequestResult<>(false, List.of(packet),
-                                                Collections.emptyList()));
+                                                List.of()));
         when(vehicleInformationModule.reportComponentIdentification(any(), eq(0)))
                 .thenReturn(new BusResult<>(false, packet));
 
@@ -644,10 +584,6 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
 
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_2_D);
 
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_2_D);
-
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_2_D);
-
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0));
         verify(vehicleInformationModule).reportComponentIdentification(any());
 
@@ -658,7 +594,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testModelLessThanOneCharactersWarning() throws IOException {
+    public void testModelLessThanOneCharactersWarning() {
         ComponentIdentificationPacket packet = createComponentIdPacket(0,
                                                                        "Bat",
                                                                        "",
@@ -676,8 +612,8 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         when(dataRepository.getObdModule(eq(0x00))).thenReturn(obdModule);
 
         when(vehicleInformationModule.reportComponentIdentification(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet),
-                                                Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet),
+                                                List.of()));
 
         when(vehicleInformationModule.reportComponentIdentification(any(), eq(0)))
                 .thenReturn(new BusResult<>(false, packet));
@@ -689,9 +625,6 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         verify(dataRepository).putObdModule(obdModule);
 
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_D);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_D);
-
-        verify(reportFileModule).onResult(WARN.toString() + COLON_SPACE + EXPECTED_WARN_MESSAGE_3_D);
 
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0));
         verify(vehicleInformationModule).reportComponentIdentification(any());
@@ -704,7 +637,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testMoreThanOneModuleWithFunctionZeroFailure() throws IOException {
+    public void testMoreThanOneModuleWithFunctionZeroFailure() {
         ComponentIdentificationPacket packet0x00 = createComponentIdPacket(0,
                                                                            "Bat",
                                                                            "TheBatCave",
@@ -737,7 +670,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
 
         when(vehicleInformationModule.reportComponentIdentification(any()))
                 .thenReturn(new RequestResult<>(false, List.of(packet0x00, packet0x01),
-                                                Collections.emptyList()));
+                                                List.of()));
 
         when(vehicleInformationModule.reportComponentIdentification(any(), eq(0)))
                 .thenReturn(new BusResult<>(false, packet0x00));
@@ -753,7 +686,6 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         verify(dataRepository).putObdModule(obdModule0x01);
 
         String expected2ModulesWarnMessage = "2 module(s) have claimed function 0 - only one module should";
-        verify(reportFileModule).onResult(WARN.toString() + COLON_SPACE + expected2ModulesWarnMessage);
 
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0));
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(1));
@@ -766,7 +698,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testPacketsEmptyFailureGlobalRequest() throws IOException {
+    public void testPacketsEmptyFailureGlobalRequest() {
         ComponentIdentificationPacket packet = createComponentIdPacket(0,
                                                                        "Bat",
                                                                        "TheBatCave",
@@ -784,8 +716,8 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         when(dataRepository.getObdModule(0x00)).thenReturn(obdModule);
 
         when(vehicleInformationModule.reportComponentIdentification(any()))
-                .thenReturn(new RequestResult<>(false, Collections.emptyList(),
-                                                Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(),
+                                                List.of()));
 
         when(vehicleInformationModule.reportComponentIdentification(any(), eq(0)))
                 .thenReturn(new BusResult<>(false, packet));
@@ -800,16 +732,6 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_5_A);
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_5_B);
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_6_A);
-
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_4_A_4_B);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_5_A);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_5_B);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_6_A);
-
-        verify(reportFileModule).onResult(WARN.toString() + COLON_SPACE + EXPECTED_WARN_MESSAGE_4_A_4_B);
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_5_A);
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_5_B);
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_6_A);
 
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0));
         verify(vehicleInformationModule).reportComponentIdentification(any());
@@ -826,7 +748,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testSerialNumberContainsAsciiNonPrintableCharacterFailure() throws IOException {
+    public void testSerialNumberContainsAsciiNonPrintableCharacterFailure() {
         char unprintableAsciiNull = 0x0;
         String serialNumber = "ST" + unprintableAsciiNull + "109823456";
         ComponentIdentificationPacket packet0x00 = createComponentIdPacket(0x00,
@@ -921,9 +843,6 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
 
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_2_D);
 
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_2_D);
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_2_D);
-
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0));
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(1));
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(2));
@@ -937,7 +856,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testSerialNumberEightCharactersWarning() throws IOException {
+    public void testSerialNumberEightCharactersWarning() {
         ComponentIdentificationPacket packet = createComponentIdPacket(0,
                                                                        "Bat",
                                                                        "TheBatCave",
@@ -968,13 +887,6 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         verify(dataRepository).putObdModule(eq(obdMoule0x00));
 
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_A);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_A);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_A);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_A);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_A);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, WARN, EXPECTED_WARN_MESSAGE_3_A);
-
-        verify(reportFileModule).onResult(WARN.toString() + COLON_SPACE + EXPECTED_WARN_MESSAGE_3_A);
 
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0x00));
         verify(vehicleInformationModule).reportComponentIdentification(any());
@@ -988,7 +900,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testSerialNumberEndsWithNonNumericCharacterInLastSixCharactersFailure() throws IOException {
+    public void testSerialNumberEndsWithNonNumericCharacterInLastSixCharactersFailure() {
         ComponentIdentificationPacket packet = createComponentIdPacket(0,
                                                                        "Bat",
                                                                        "TheBatCave",
@@ -1007,7 +919,7 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
 
         when(vehicleInformationModule.reportComponentIdentification(any()))
                 .thenReturn(new RequestResult<>(false, List.of(packet),
-                                                Collections.emptyList()));
+                                                List.of()));
 
         when(vehicleInformationModule.reportComponentIdentification(any(), eq(0)))
                 .thenReturn(new BusResult<>(false, packet));
@@ -1019,9 +931,6 @@ public class Part01Step09ControllerTest extends AbstractControllerTest {
         verify(dataRepository).putObdModule(obdMoule0x00);
 
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_2_C);
-        verify(reportFileModule).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, EXPECTED_FAIL_MESSAGE_2_C);
-
-        verify(reportFileModule).onResult(FAIL.toString() + COLON_SPACE + EXPECTED_FAIL_MESSAGE_2_C);
 
         verify(vehicleInformationModule).reportComponentIdentification(any(), eq(0));
         verify(vehicleInformationModule).reportComponentIdentification(any());
